No issue: Tighten the tests of the text tag and empty text decoding fixes (#735)
Follow-ups from the post-merge reviews of #715 and #703.

WikipediaXMLReader: move TEXT_START_TAG_NAME to the other static
constants. WikipediaXMLReaderTest covers the text start tag with and
without attributes, self-closing variants including <text/>, and input
that ends within the start tag. It checks whether a revision has a text
through DiffCalculator.processRevision() instead of catching a
NullPointerException. DiffToolE2ETest also accepts "(null, " rows.

RevisionCodecRoundTripTest checks an empty REPLACE, INSERT and full
revision text whose block does not end on a byte boundary, so removing
any of the fill bit skips in RevisionDecoder fails a test. The codec data
is derived from the diff parts, and the setup and the decoding
assertions are shared with DiffCalculatorEmptyRevisionTest through
RevisionCodecTestSupport.